[package]
name = "ares"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.40"
bollard = { version = "0.18.1", features = ["buildkit"]}
bytes = "1.9.0"
clap = { version = "4.5.26", features = ["derive"] }
flate2 = "1.0.35"
futures-util = "0.3.31"
tar = "0.4.43"
tokio = { version = "1.43.0", features = ["full"] }
walkdir = "2.5.0"
anyhow = "1.0.95"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
async-trait = "0.1.85"
serde_json = "1.0.135"
russh = "0.49.2"
ssh-key = "0.6.7"
